--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
     <!-- ==================== Dependencies versions ==================== -->
     <guava.version>31.1-jre</guava.version>
     <guice.version>5.1.0</guice.version>
+    <error.prone.annotations.version>2.16</error.prone.annotations.version>
     <!-- Latest version of HikariCP compatible with Java 8: don't bump it! -->
     <hikaricp.version>4.0.3</hikaricp.version>
     <slf4j.version>2.0.4</slf4j.version>
@@ -79,6 +80,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.google.errorprone</groupId>
+      <artifactId>error_prone_annotations</artifactId>
+      <version>${error.prone.annotations.version}</version>
+    </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
