--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Integration Tests
       run: mvn ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} -DskipUnitTests verify
     - name: SonarCloud Scan
-      run: mvn sonar:sonar
+      run: mvn sonar:sonar -Dsonar.projectKey=Djaytan_mc-jobs-reborn-patch-place-break
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      
+
