--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,8 @@
     <java.version>8</java.version>
 
     <!-- ==================== Sonar ==================== -->
+    <!-- sonar.projectKey must be defined through CLI only -->
     <sonar.organization>djaytan</sonar.organization>
-    <sonar.projectKey>Djaytan_mc-jobs-reborn-patch-place-break</sonar.projectKey>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco-merged-test-coverage-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 
