--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: CI
 
 on:
@@ -19,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MAVEN_MAIN_ARGS: -Pcontinuous-integration -U -B -e -C --fail-at-end --no-transfer-progress
-      MAVEN_SKIP_ARGS: -Dfmt.skip=true -Dsort.skip=true -Denforcer.skip=true
     steps:
     - name: Git checkout
       uses: actions/checkout@v3
@@ -30,11 +21,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build
-      run: mvn ${{ env.MAVEN_MAIN_ARGS }} compile
-    - name: Unit Tests
-      run: mvn ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} test
-    - name: Integration Tests
-      run: mvn ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} -DskipUnitTests verify
+      run: mvn ${{ env.MAVEN_MAIN_ARGS }} verify
     - name: SonarCloud Scan
       run: mvn sonar:sonar -Dsonar.projectKey=Djaytan_mc-jobs-reborn-patch-place-break
       env:
