--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,37 +12,48 @@ env:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
+
     steps:
     - name: Git checkout
       uses: actions/checkout@v3
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+
     - name: Build
       run: mvn ${{ env.MAVEN_MAIN_ARGS }} verify
+
     - name: SonarCloud Scan
       run: mvn sonar:sonar -Dsonar.projectKey=Djaytan_mc-jobs-reborn-patch-place-break
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   publish:
+    name: Publish
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
+
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
+
       - name: Publish
         run: mvn ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} deploy
         env:
