--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,57 +5,43 @@ on:
     branches: [ 'main' ]
   pull_request:
     branches: [ 'main' ]
+  release:
+    types: [ 'created' ]
 
 env:
   MAVEN_MAIN_ARGS: -Pcontinuous-integration -U -B -e -C --fail-at-end --no-transfer-progress
   MAVEN_SKIP_ARGS: -DskipTests=true -DskipITs=true -Dfmt.skip=true -Dsort.skip=true -Denforcer.skip=true
 
 jobs:
-  build:
-    name: Build
+  ci:
+    name: CI
     runs-on: ubuntu-latest
-
-    steps:
-    - name: Git checkout
-      uses: actions/checkout@v3
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-
-    - name: Build
-      run: mvn ${{ env.MAVEN_MAIN_ARGS }} verify
-
-    - name: SonarCloud Scan
-      run: mvn sonar:sonar -Dsonar.projectKey=Djaytan_mc-jobs-reborn-patch-place-break
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  publish:
-    name: Publish
-    if: github.event_name == 'push'
-    needs: build
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write
-
+    if: github.event_name != 'release'
     steps:
       - name: Git checkout
         uses: actions/checkout@v3
-
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
+      - name: Build & Test
+        run: mvn ${{ env.MAVEN_MAIN_ARGS }} verify
+      - name: SonarCloud Quality Scan
+        run: mvn sonar:sonar -Dsonar.projectKey=Djaytan_mc-jobs-reborn-patch-place-break
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Release
+  cd-prepare:
+    name: CD - Prepare
+    needs: ci
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v3
+      - name: Prepare
         uses: qcastel/github-actions-maven-release@v1.12.39
         env:
           JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
@@ -63,9 +49,26 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           maven-args: ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} -Dmaven.javadoc.skip=true
           release-branch-name: 'main'
+          skip-perform: true
 
-#      - name: Publish
-#        run: mvn ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} deploy
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  cd-perform:
+    name: CD - Perform
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release'
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Perform
+        run: mvn ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
