--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,8 +5,6 @@ on:
     branches: [ 'main' ]
   pull_request:
     branches: [ 'main' ]
-  release:
-    types: [ 'created' ]
 
 env:
   MAVEN_MAIN_ARGS: -Pcontinuous-integration -U -B -e -C --fail-at-end --no-transfer-progress
@@ -33,8 +31,8 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  cd-prepare:
-    name: CD - Prepare
+  cd:
+    name: CD
     needs: ci
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
@@ -49,26 +47,4 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           maven-args: ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} -Dmaven.javadoc.skip=true
           release-branch-name: 'main'
-          skip-perform: true
-
-  cd-perform:
-    name: CD - Perform
-    runs-on: ubuntu-latest
-    if: github.event_name == 'release'
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Git checkout
-        uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: maven
-      - name: Perform
-        run: mvn ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
