--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,8 +31,8 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  cd:
-    name: CD
+  cd-prepare:
+    name: CD - Prepare
     needs: ci
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
@@ -49,6 +49,27 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           maven-args: ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} -Dmaven.javadoc.skip=true
-          maven-servers: '[{"id": "github", "username": "djaytan", "password": "${{ secrets.GITHUB_TOKEN }}", "privateKey": "${{ secrets.SSH_PRIVATE_KEY }}", "passphrase": ""}]'
           release-branch-name: 'main'
+          skip-perform: true
 
+  cd-perform:
+    name: CD - Perform
+    needs: cd-prepare
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Perform
+        run: mvn ${{ env.MAVEN_MAIN_ARGS }} ${{ env.MAVEN_SKIP_ARGS }} deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
