--- a/pom.xml
+++ b/pom.xml
@@ -375,6 +375,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>3.1.0</version>
+        <configuration>
+          <!--
+            We will not have to deploy in repository since we rely on Jitpack
+            https://jitpack.io/#Djaytan/mc-jobs-reborn-patch-place-break
+          -->
+          <skip>true</skip>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -401,15 +408,6 @@
             <requireUpperBoundDeps />
           </rules>
         </configuration>
-        <executions>
-          <execution>
-            <id>enforce-validation</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <phase>validate</phase>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
