--- a/src/patch-place-break/patch-place-break-api/pom.xml
+++ b/src/patch-place-break/patch-place-break-api/pom.xml
@@ -43,6 +43,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <scope>provided</scope>
