--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
   <description>A place-break patch extension of JobsReborn plugin for Bukkit servers (Minecraft)</description>
   <url>https://github.com/Djaytan/mc-jobs-reborn-patch-place-break</url>
 
+  <inceptionYear>2022</inceptionYear>
+
   <licenses>
     <license>
       <name>MIT</name>
@@ -502,6 +504,51 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.0.0</version>
+        <configuration>
+          <licenseName>mit</licenseName>
+          <projectName>JobsReborn-PatchPlaceBreak</projectName>
+          <organizationName>Loïc DUBOIS-TERMOZ (alias Djaytan)</organizationName>
+          <canUpdateCopyright>true</canUpdateCopyright>
+          <canUpdateDescription>true</canUpdateDescription>
+          <canUpdateLicense>true</canUpdateLicense>
+          <failIfWarning>true</failIfWarning>
+          <ignoreNoFileToScan>true</ignoreNoFileToScan>
+          <trimHeaderLine>true</trimHeaderLine>
+          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+          <emptyLineAfterHeader>true</emptyLineAfterHeader>
+          <roots>
+            <root>src/main/java</root>
+            <root>src/test/java</root>
+          </roots>
+        </configuration>
+        <executions>
+          <execution>
+            <id>update-file-header</id>
+            <goals>
+              <goal>update-file-header</goal>
+            </goals>
+            <phase>process-sources</phase>
+            <configuration>
+              <skipUpdateLicense>${license.skipUpdate}</skipUpdateLicense>
+            </configuration>
+          </execution>
+          <execution>
+            <id>check-file-header</id>
+            <goals>
+              <goal>check-file-header</goal>
+            </goals>
+            <phase>validate</phase>
+            <configuration>
+              <failOnMissingHeader>true</failOnMissingHeader>
+              <skipCheckLicense>${license.skipCheck}</skipCheckLicense>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.8</version>
@@ -625,6 +672,8 @@
       <properties>
         <fmt.goal>format</fmt.goal>
         <fmt.phase>process-sources</fmt.phase>
+        <license.skipUpdate>false</license.skipUpdate>
+        <license.skipCheck>true</license.skipCheck>
         <sortpom.goal>sort</sortpom.goal>
       </properties>
     </profile>
@@ -632,8 +681,9 @@
       <id>ci-cd</id>
       <properties>
         <fmt.goal>check</fmt.goal>
-        <!-- We want to fail ASAP if format is invalid -->
         <fmt.phase>validate</fmt.phase>
+        <license.skipUpdate>true</license.skipUpdate>
+        <license.skipCheck>false</license.skipCheck>
         <sortpom.goal>verify</sortpom.goal>
       </properties>
     </profile>
