--- a/renovate.json5
+++ b/renovate.json5
@@ -11,7 +11,7 @@
     "org.glassfish:jakarta.el",
     "org.hibernate.validator:hibernate-validator"
   ],
-  "labels": ["dependencies"],
+  "labels": ["t:dependencies"],
   "packageRules": [
     {
       "matchUpdateTypes": [
