--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,8 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.xml]
+indent_size = 4
+
 [*.{diff,md,properties,conf}]
 trim_trailing_whitespace = false
