--- a/pom.xml
+++ b/pom.xml
@@ -425,7 +425,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.6.1</version>
+                    <version>3.8.1</version>
                     <configuration>
                         <failBuild>true</failBuild>
                         <failOnWarning>true</failOnWarning>
@@ -627,6 +627,7 @@
                             <goal>analyze-only</goal>
                             <goal>analyze-dep-mgt</goal>
                             <goal>analyze-duplicate</goal>
+                            <goal>analyze-exclusions</goal>
                         </goals>
                     </execution>
                 </executions>
