--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,6 @@
 # Set default behavior to automatically normalize line endings.
 * text=auto eol=lf
 
-# Force batch scripts to always use CRLF line endings so that if a repo is accessed
-# in Windows via a file share from Linux, the scripts will work.
-*.{cmd,[cC][mM][dD]} text eol=crlf
-*.{bat,[bB][aA][tT]} text eol=crlf
+# Enforce CRLF line endings in Windows batch scripts to avoid issues.
+*.cmd text eol=crlf
+*.bat text eol=crlf
